base/back-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    app: back
  name: back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back
  serviceName: back
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: back
    spec:
      containers:
        - args:
            - yarn
            - run
            - runprod
          image: ghcr.io/workadventure-suse/workadventure-back:v0.0.1
          name: back
          ports:
            - name: http
              containerPort: 8080
            - name: api
              containerPort: 50051
          startupProbe:
            httpGet:
              path: /metrics
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            failureThreshold: 1
            periodSeconds: 5
      restartPolicy: Always
