base/pusher-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: pusher
  name: pusher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pusher
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: pusher
    spec:
      containers:
        - args:
            - yarn
            - run
            - runprod
          image: ghcr.io/workadventure-suse/workadventure-pusher:v0.0.1
          name: pusher
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /metrics
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            failureThreshold: 1
            periodSeconds: 5
      restartPolicy: Always
